<resources>
    <string name="app_name">EasyPay</string>
    <string name="entre">Entre</string>
    <string name="email">E-mail</string>
    <string name="cadastre_se">Ainda não possui conta? Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="cpf">CPF</string>
    <string name="nome_cartao">Nome do titular</string>
    <string name="numero_cartao">Número do cartão</string>
    <string name="mm">mm</string>
    <string name="aa">aa</string>
    <string name="cvv">CVV</string>
    <string name="continuar">Continuar</string>
    <string name="carregando">Carregando...</string>
    <string name="login_invalido">Login inválido</string>
    <string name="cadastrar_cartao">Cadastrar cartão</string>
    <string name="erro_request">Erro ao conectar com o servidor</string>
    <string name="erro_campos">Preencha todos os campos</string>

    <string name="minha_mesa">Mesa</string>
    <string name="amigos">Amigos</string>
    <string name="meus_dados">Perfil</string>
    <string name="historico">Histórico</string>

    <string name="scan_barcode_button">Ler QR Code</string>
    <string name="no_barcode_captured">Nenhum QR Code</string>
    <string name="barcode_error_format">"Erro ao ler QRCode</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">É necessário ter acesso à câmera</string>
    <string name="no_camera_permission">O App pode apresentar problemas por não ter permissão para acessar a câmera</string>
    <string name="low_storage_error">Erro, memória insuficiente</string>

    <string name="meus_dados_string">Meus Dados</string>
    <string name="gravar">Gravar</string>
    <string name="meu_cartao">Meu Cartão</string>
    <string name="abertura_mesa">Abertura de Mesa</string>
    <string name="numero_mesa">Preencha o número da mesa</string>
    <string name="adicionar">Adicionar</string>
    <string name="selecione">Selecione o Produto</string>
    <string name="detalhes">Detalhes</string>
    <string name="mesa">Mesa: </string>
    <string name="fechar_conta">Fechar Conta</string>
    <string name="fechar_conta_desejo">Deseja fechar a conta desta mesa?</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="conta_finalizada">Conta finalizada com sucesso!</string>
    <string name="mesas">Mesas</string>
    <string name="pedido">Pedido</string>
    <string name="dados_cartao">Dados do Cartão</string>
    <string name="pagamento_realizado">Pagamento realizado com sucesso!</string>
    <string name="produtos">Produtos</string>
    <string name="minha_mesa_string">Minha Mesa</string>
    <string name="pagamento">Pagamento</string>

</resources>