<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    tools:context="br.com.easypayapp.easypay.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.25">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/entre"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/background_edittext"
            android:drawableLeft="@drawable/ic_mail_outline"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_mail_outline"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="#AAFFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/background_edittext"
            android:drawableLeft="@drawable/ic_lock_outline"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_lock_outline"
            android:fontFamily="sans-serif"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="#AAFFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/background_button"
            android:text="@string/entrar"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:alpha="0.8"
        android:text="@string/cadastre_se"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>
