<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    tools:context="br.com.easypayapp.easypay.cadastro.CadastroActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/edit_text_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_edittext"
        android:drawableLeft="@drawable/ic_person_outline"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_person_outline"
        android:fontFamily="sans-serif"
        android:hint="@string/nome"
        android:inputType="textCapCharacters"
        android:minHeight="48dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="#AAFFFFFF"
        android:textSize="16sp"
        android:maxLength="50"/>

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_edittext"
        android:drawableLeft="@drawable/ic_mail_outline"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_mail_outline"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="#AAFFFFFF"
        android:textSize="16sp"
        android:maxLength="50"/>

    <EditText
        android:id="@+id/edit_text_fone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_edittext"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_phone"
        android:fontFamily="sans-serif"
        android:hint="@string/telefone"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="#AAFFFFFF"
        android:textSize="16sp"
        android:maxLength="11"/>

    <EditText
        android:id="@+id/edit_text_cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_edittext"
        android:drawableLeft="@drawable/ic_person_pin"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_person_pin"
        android:fontFamily="sans-serif"
        android:hint="@string/cpf"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="#AAFFFFFF"
        android:textSize="16sp"
        android:maxLength="11"/>

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_edittext"
        android:drawableLeft="@drawable/ic_lock_outline"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_lock_outline"
        android:fontFamily="sans-serif"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="#AAFFFFFF"
        android:textSize="16sp"
        android:maxLength="20"/>

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_button"
        android:clickable="true"
        android:paddingEnd="78dp"
        android:paddingLeft="78dp"
        android:paddingRight="78dp"
        android:paddingStart="78dp"
        android:text="@string/continuar"
        android:onClick="continuar"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnAlterarCartao"
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:alpha="0.8"
        android:background="@null"
        android:clickable="true"
        android:onClick="alterarCartao"
        android:text="Alterar Cartão"
        android:textAllCaps="false"
        android:visibility="gone"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>
