<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    tools:context="br.com.easypayapp.easypay.cartao.CadastroCartaoActivity">

    <EditText
        android:id="@+id/edit_text_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_edittext"
        android:drawableLeft="@drawable/ic_credit_card"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_credit_card"
        android:fontFamily="sans-serif"
        android:hint="@string/nome_cartao"
        android:inputType="textCapCharacters"
        android:minHeight="48dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="#AAFFFFFF"
        android:textSize="16sp"
        android:maxLength="30"/>

    <EditText
        android:id="@+id/edit_text_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_edittext"
        android:drawableLeft="@drawable/ic_credit_card"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_credit_card"
        android:fontFamily="sans-serif"
        android:hint="@string/numero_cartao"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="#AAFFFFFF"
        android:textSize="16sp"
        android:maxLength="16"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/edit_text_mes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/background_edittext"
            android:drawableLeft="@drawable/ic_date_range"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_date_range"
            android:fontFamily="sans-serif"
            android:hint="@string/mm"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="#AAFFFFFF"
            android:textSize="16sp"
            android:maxLength="2"/>

        <EditText
            android:id="@+id/edit_text_ano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/background_edittext"
            android:drawableLeft="@drawable/ic_date_range"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_date_range"
            android:fontFamily="sans-serif"
            android:hint="@string/aa"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="#AAFFFFFF"
            android:textSize="16sp"
            android:maxLength="2"/>

    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_cvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_edittext"
        android:drawableLeft="@drawable/ic_credit_card"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_credit_card"
        android:fontFamily="sans-serif"
        android:hint="@string/cvv"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="#AAFFFFFF"
        android:textSize="16sp"
        android:maxLength="3"/>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_button"
        android:clickable="true"
        android:onClick="cadastrarCartao"
        android:paddingEnd="78dp"
        android:paddingLeft="78dp"
        android:paddingRight="78dp"
        android:paddingStart="78dp"
        android:text="@string/cadastrar_cartao"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnCadastrarDepois"
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:alpha="0.8"
        android:background="@null"
        android:clickable="true"
        android:onClick="cadastrarDepois"
        android:text="Cadastrar depois"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>